[gd_scene load_steps=10 format=3 uid="uid://c26imj8rbe8pl"]

[ext_resource type="PackedScene" uid="uid://c5evis4gxner6" path="res://userinterfaces/menu_button/menu_button.tscn" id="1_cf140"]
[ext_resource type="Script" path="res://userinterfaces/weapon_menu/weapon_menu.gd" id="1_mvpp8"]
[ext_resource type="Texture2D" uid="uid://co73gl5x5jkf2" path="res://assets/shop_menu/left.svg" id="2_7tcrw"]
[ext_resource type="Texture2D" uid="uid://kdv8eb80hvyp" path="res://assets/gun/smg/smg.svg" id="3_w8dwc"]
[ext_resource type="Texture2D" uid="uid://b3nkicuxw3tc6" path="res://assets/shop_menu/right.svg" id="4_w26ru"]
[ext_resource type="Texture2D" uid="uid://bwhdql3xaxp0o" path="res://assets/shop_menu/buy.svg" id="5_dvp18"]

[sub_resource type="LabelSettings" id="LabelSettings_ps70m"]
font_color = Color(0.764706, 0.588235, 0.584314, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cuyks"]
font_size = 12
font_color = Color(0.764706, 0.588235, 0.584314, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wq4vi"]
font_color = Color(0, 1, 0, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="WeaponMenu" type="HBoxContainer"]
offset_right = 194.0
offset_bottom = 96.0
script = ExtResource("1_mvpp8")

[node name="LeftButton" parent="." instance=ExtResource("1_cf140")]
custom_minimum_size = Vector2(29, 38)
layout_mode = 2
texture = ExtResource("2_7tcrw")
float_distance = 2.0

[node name="WeaponTexture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(128, 96)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_w8dwc")
stretch_mode = 3

[node name="OwnedLabel" type="Label" parent="WeaponTexture"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -34.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
text = "OWNED"
label_settings = SubResource("LabelSettings_ps70m")
horizontal_alignment = 1

[node name="Selected" type="Label" parent="WeaponTexture/OwnedLabel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -12.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
text = "(selected)"
label_settings = SubResource("LabelSettings_cuyks")
horizontal_alignment = 1
vertical_alignment = 2

[node name="PriceLabel" type="Label" parent="WeaponTexture"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
text = "$100"
label_settings = SubResource("LabelSettings_wq4vi")
horizontal_alignment = 1

[node name="BuyButton" parent="WeaponTexture" instance=ExtResource("1_cf140")]
visible = false
custom_minimum_size = Vector2(46, 21)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -41.0
offset_right = 23.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_dvp18")
float_distance = 0.0

[node name="Sprite2D" parent="WeaponTexture/BuyButton/Sprite" index="0"]
position = Vector2(0, 0)
texture = ExtResource("5_dvp18")

[node name="Label" type="Label" parent="WeaponTexture/BuyButton/Sprite/Sprite2D" index="0"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -10.5
offset_right = -23.0
offset_bottom = -10.5
grow_horizontal = 2
grow_vertical = 2
text = "BUY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InsufficientFundsLabel" type="Label" parent="WeaponTexture"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -41.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
text = "TOO BROKE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightButton" parent="." instance=ExtResource("1_cf140")]
custom_minimum_size = Vector2(29, 38)
layout_mode = 2
texture = ExtResource("4_w26ru")
float_distance = 2.0

[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="WeaponTexture/BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]

[editable path="WeaponTexture/BuyButton"]
